deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teleport
  namespace: teleport
  labels:
    app: teleport
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 443
      targetPort: 3080
      protocol: TCP
    - name: auth
      port: 3025
      targetPort: 3025
      protocol: TCP
  selector:
    app: teleport
